# Swift-Decision-Data

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/code-quality/: react-specialist.md
.claude/agents/data-engineering/: airflow-expert.md  dw-specialist.md  shadowtraffic-specialist.md
.claude/kb/: _index.yaml
.claude/kb/bigquery/: index.md  quick-reference.md
.claude/kb/bigquery/concepts/: clustering.md  materialized-views.md  partitioning.md  slots-and-cost.md
.claude/kb/bigquery/patterns/: cost-optimized-query.md  incremental-load-merge.md  partitioned-clustered-table.md
.claude/kb/dbt/: index.md  quick-reference.md
.claude/kb/dbt/concepts/: materializations.md  model-layers.md  snapshots.md  sources-and-refs.md  tests.md
.claude/kb/dbt/patterns/: incremental-model.md  model-yaml-tests.md  snapshot-to-dim.md  staging-model.md
.claude/kb/dw/: index.md  quick-reference.md
.claude/kb/dw/concepts/: dimension-tables.md  dimensional-modeling.md  fact-tables.md  scd-types.md  star-vs-snowflake.md
.claude/kb/shadowtraffic/: index.md  quick-reference.md
.claude/sdd/: readme.md
agent/: config.yaml  graph.py  react_agent.py  state.py  tools.py
agent/crews/: agents.yaml  crew.py  tasks.yaml
agent/nodes/: classifier.py  hybrid_agent.py  rag_agent.py  sql_agent.py
agent/observability/: deepeval_scorer.py  langfuse_callbacks.py
agent/prompts/: classifier.txt  hybrid_agent.txt  rag_agent.txt  rag_tool.txt  react_system.txt  sql_agent.txt  sql_tool.txt
contextualize/knowledge/: data_dictionary.md  few_shot_examples.md  kpi_definitions.md
contextualize/mcp_server/: Dockerfile  server.py  tools.py
contextualize/qdrant_ingest/: ingest.py
ingest/loaders/: postgres_loader.py  seed.py
ingest/models/: __init__.py  dim_cliente.py  dim_loja.py  dim_produto.py  dim_tempo.py  fato_estoque.py  fato_vendas.py  review.py
ingest/shadowtraffic/: dims.json  fato_estoque.json  fato_vendas.json  reviews.json
ingest/sql/: 03_langfuse_db.sql  create_readonly_user.sql  schema.sql
notes/: 01 - kickoff.md  DEPLOYMENT_GUIDE.md  summary-requirements.md
tests/: conftest.py  test_acceptance.py  test_classifier.py  test_crew.py  test_deepeval_scorer.py  test_langfuse_handler.py  test_loader.py  test_mcp_tools.py  test_models.py  test_react_agent.py  test_sql_agent.py  test_tools.py
ui/: Dockerfile  app.py  chainlit.md
(+18 files in other folders)
