[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infoagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "psycopg2-binary>=2.9",

    # --- LangChain stack ---
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",

    # --- CrewAI ---
    "crewai>=0.80",

    # --- Vector store / embeddings ---
    "llama-index>=0.10",
    "llama-index-vector-stores-qdrant>=0.2",
    "llama-index-embeddings-huggingface>=0.3",
    "qdrant-client>=1.9",

    # --- UI ---
    "chainlit>=1.1",

    # --- Observability ---
    "langfuse>=2.50",
    "openlit>=1.20",
    "deepeval>=1.0",

    # --- Config / logging ---
    "pyyaml>=6.0",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres,qdrant]>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["ingest", "contextualize", "agent", "ui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
